--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node serverr.js",
+    "start": "node server.js"
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -30,18 +30,20 @@
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
+    "path": "^0.12.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "typescript": "~3.8.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.1",
-    "@angular/cli": "~9.1.1",
-    "@angular/compiler-cli": "~9.1.1",
+    "@angular/cli": "^11.1.4",
+    "@angular/compiler-cli": "^9.1.13",
     "@angular/language-service": "~9.1.1",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -57,7 +59,6 @@
   },
   "engines": {
     "node": "~12.19.0",
-    "npm":"~6.14.8"
-    
+    "npm": "~6.14.8"
   }
 }
