--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "node serverr.js",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "postinstall": "ng build --aot --prod"
+    "e2e": "ng e2e", 
+    "e2e": "ng e2e", 
+	"heroku-postbuild": "ng build --prod"
+
   },
   "private": true,
   "dependencies": {
@@ -32,12 +34,15 @@
     "jquery": "^3.5.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+	"@angular/cli": "~11.0.2",
+    "@angular/compiler-cli": "~10.0.14",
+	"typescript": "~3.9.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.1",
-    "@angular/cli": "~9.1.1",
-    "@angular/compiler-cli": "~9.1.1",
+    "@angular/cli": "~11.0.2",
+    "@angular/compiler-cli": "~10.0.14",
     "@angular/language-service": "~9.1.1",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
@@ -53,11 +58,11 @@
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.8.3"
+    "typescript": "~3.9.5"
   },
   "engines": {
-    "node": "~12.19.0",
-    "npm":"~6.14.8"
+    "node": "~12.18.2",
+    "npm":"~6.14.5"
     
   }
 }
